--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -23,4 +23,4 @@ jobs:
           date > timestamp.txt
           git add timestamp.txt
           git commit -m "Daily automated commit [24f1000531@ds.study.iitm.ac.in] $(date +'%Y-%m-%d %H:%M:%S')"
-          git push
+          git push https://${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}.git
